Added properties to page

--- a/src/vois/vuetify/Tests/buttonTest.ipynb
+++ b/src/vois/vuetify/Tests/buttonTest.ipynb
@@ -2,17 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "68f4cc75-ce1d-4ce2-9b22-7418749b61a5",
-   "metadata": {},
+   "execution_count": 1,
+   "id": "78293632",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "import importlib.util\n",
     "import sys\n",
-    "sys.path.append('../../../')\n",
+    "\n",
+    "spec = importlib.util.spec_from_file_location(\"vois\", \"../../__init__.py\")\n",
+    "module = importlib.util.module_from_spec(spec)\n",
+    "sys.modules['vois'] = module\n",
+    "spec.loader.exec_module(module)\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=DeprecationWarning) \n",
-    "\n",
     "\n",
     "from vois.vuetify import settings, Button\n",
     "from vois.vuetify import button"
@@ -20,14 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "84940c4b",
-   "metadata": {},
+   "execution_count": 8,
+   "id": "65048188",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63e7e7878066498a951847cc79d7f199",
+       "model_id": "6b668370f97a4a0b8dad13bfe615cc35",
        "version_major": 2,
        "version_minor": 0
       },
@@ -41,7 +49,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04b7363f3f57498693d3cf11d1e0d6c4",
+       "model_id": "28ba9d98f3bc443884e382e825573374",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,7 +63,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b94eb28537a45d2ad337f1e58409dd2",
+       "model_id": "c0a0ec1ba1c14d5ca285f3f7e8f13291",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,21 +91,23 @@
     "\n",
     "b3 = Button('Contacts', onlytext=True, textcolor=settings.color_first, width=150, height=28, href='https://ec.europa.eu/info/contact_en', target=\"_blank\", tooltip='Open a URL')\n",
     "\n",
-    "display(b1.draw())\n",
+    "display(b1)\n",
     "display(b2.draw())\n",
     "display(b3.draw())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5b902aae",
-   "metadata": {},
+   "execution_count": 3,
+   "id": "e60ca09e",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ceac8503af584377969fee39d89a97cc",
+       "model_id": "f97565449f3943a3a7807f5d8f7c0067",
        "version_major": 2,
        "version_minor": 0
       },
@@ -111,7 +121,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09d41605cee34cafab9d802a3de06c80",
+       "model_id": "e002402fbf4e423d8ec838a5a55e39d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,24 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "158c674a",
-   "metadata": {},
+   "execution_count": 4,
+   "id": "e8ea29d2",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/edoardo/JRC_Projects/vois/src/vois/vuetify/Tests/../../../vois/vuetify/deprecated/button.py:13: UserWarning: DeprecationWarning: The button class is deprecated, please use Button.\n",
-      "  deprecation_class_warning(self.__class__.__name__)\n",
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_20917/2502310903.py:5: UserWarning: DeprecationWarning: The \"draw\" method is deprecated, please just use the object widget itself.\n",
-      "  b.draw()\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59290b178fbc4745a94092a098156069",
+       "model_id": "a5426322c53d474b9cdb80f7e2915f47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,7 +158,7 @@
        "button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,60 +173,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "41b6c112",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_20917/731926375.py:1: DeprecationWarning: This method is deprecate used instead button_obj.icon = 'your_icon_name'\n",
-      "  b.setIcon('mdi-menu')\n"
-     ]
-    }
-   ],
+   "execution_count": 5,
+   "id": "4254d3bd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "b.setIcon('mdi-menu')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "d86d2b51",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_20917/967366005.py:1: DeprecationWarning: This method is deprecate used instead button_obj.text = 'your_new_text'\n",
-      "  b.setText('New button text')\n"
-     ]
-    }
-   ],
+   "execution_count": 6,
+   "id": "baf3f094",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "b.setText('New button text')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "bcef9929",
-   "metadata": {},
+   "execution_count": 7,
+   "id": "9e3ba88d",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ck/zymqlsj957gg49t2l4p7ngfc0000gn/T/ipykernel_20917/1030447386.py:4: UserWarning: DeprecationWarning: The \"draw\" method is deprecated, please just use the object widget itself.\n",
-      "  display(b1.draw())\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c976ef5d3f41485abc56dded74cfbb3b",
+       "model_id": "2d4231806cfe4e31a5b26489f940fe5d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -246,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8b4d411",
+   "id": "6949e626",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -268,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
