--- a/src/vois/vuetify/Tests/pageTest.ipynb
+++ b/src/vois/vuetify/Tests/pageTest.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fc4820ba",
+   "execution_count": 3,
+   "id": "06d5ee95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8056109459a44537b25a259ba5914a2e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets, Layout\n",
     "\n",
@@ -18,7 +33,7 @@
     "def on_delete(*args):\n",
     "    pass\n",
     "\n",
-    "%run page.py\n",
+    "%run ../page.py\n",
     "\n",
     "p = page('Application XYZ', 'Map page', output,\n",
     "         titlecolor='#008800', titledark=True, footercolor='#cccccc', footerdark=False,\n",
@@ -36,8 +51,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "73f6c337",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.color = '#ff0000' #, '#ffffaa'\n",
+    "p.open()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "114dadc2",
+   "id": "028425a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10d9be40",
+   "id": "0a2d0e91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0d3fea4",
+   "id": "7174b5c8",
    "metadata": {},
    "outputs": [],
    "source": []
