Development folder update

--- a/src/vois/development/Proposal.ipynb
+++ b/src/vois/development/Proposal.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "15cdd921-eb8a-4c6c-8e99-0027d3945bc2",
+   "metadata": {},
+   "source": [
+    "# Summary\n",
+    "This is a proposal concerning the update of the vois library\n",
+    "\n",
+    "## Update consists in:\n",
+    "1. Remove relative import\n",
+    "2. Remove double import (backward compatible)\n",
+    "3. Use property directly instead of functions \n",
+    "4. Insert type checking\n",
+    "5. Python standard class naming (backward compatible)\n",
+    "6. Python standard property naming (backward compatible)\n",
+    "7. Risoluzione problema draw (backward compatible)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "0a8b0587-47b0-4ff0-9bad-892b80c9c3d1",
@@ -13,41 +31,23 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../src')"
+    "# This line is necessary util the new vois package with the updates is distributed\n",
+    "%run load_local_vois.py -p /Users/edoardo/JRC_Projects/vois/src/vois/__init__.py -w"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "7341d313-0f3a-434c-82ac-e6207e85e362",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Old Version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "f9763fd9-b3f0-4cb4-83eb-776e8c0c9508",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-25T10:59:15.824740Z",
-     "start_time": "2024-06-25T10:59:15.820554Z"
-    },
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "91640ae3-d941-47f8-b9fc-a57fcb885629",
    "metadata": {
     "ExecuteTime": {
@@ -58,12 +58,13 @@
    },
    "outputs": [],
    "source": [
-    "from vois.vuetify import button"
+    "from vois.vuetify import button, settings\n",
+    "settings.color_first = 'pink'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "2d70fa33-e5a5-4fdb-9fd7-d4aee7d251fa",
    "metadata": {
     "ExecuteTime": {
@@ -76,7 +77,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8621d10f72d24aa5a079b4b1a8af2ecc",
+       "model_id": "a568e88d16434bd9a08003c9d83e8284",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,19 +85,19 @@
        "button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_old_button = button.button(text='Ciao - Old!', textweight=900, width=200)\n",
+    "my_old_button = button.button(text='Ciao - Old!', textweight=900, width=200, text_color=settings.color_first)\n",
     "my_old_button.draw()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2c39496a-c1f9-4712-bc9c-bfe00d9850c2",
    "metadata": {
     "ExecuteTime": {
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "e15a818a-9ed2-425b-aa71-191f17271fea",
    "metadata": {
     "ExecuteTime": {
@@ -131,12 +132,12 @@
    },
    "outputs": [],
    "source": [
-    "from vois.vuetify import Button"
+    "from vois.vuetify import Button  # Before was 'button'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "d5295788-094f-4cde-971a-70011dfed6ba",
    "metadata": {
     "ExecuteTime": {
@@ -149,7 +150,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8eb4558b276485fad6f402f192c4b5d",
+       "model_id": "3ff537bd5e744a12bd66c036ba17dfb4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,19 +158,19 @@
        "Button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_new_button = Button(text='Ciao - New!', textWeight=900, width=200)\n",
+    "my_new_button = Button(text='Ciao - New!', text_weight=900, width=200) # Before was 'button.button(..)'\n",
     "my_new_button"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "acab90f2-bff0-4189-9537-6adb984858bc",
    "metadata": {
     "ExecuteTime": {
@@ -180,7 +181,7 @@
    },
    "outputs": [],
    "source": [
-    "my_new_button.text = 'New Name - New!'"
+    "my_new_button.text = 'New Name - New!' # Before was '.setText(...)'"
    ]
   },
   {
@@ -188,43 +189,48 @@
    "id": "217d15df-b704-46b5-920b-8baca3724499",
    "metadata": {},
    "source": [
-    "# Summary\n",
+    "## Backward Compatible\n",
     "\n",
-    "### Proposta aggiornamento componente. Liste delle cose fatte\n",
-    "1. Rimozione import relativi\n",
-    "2. Rimozione doppio import + retrocompatibile\n",
-    "3. Usare property con setting\n",
-    "4. Inserimento type checking\n",
-    "5. Cambiamento nome classe + retrocompatibile\n",
-    "6. Cambiamento nome parameteri + retrocompatibile\n",
-    "7. Risoluzione problema draw + retrocompatibile"
+    "As you can see before, the old classes, methods and properties can be used as always. The only side effect is a deprecation warning.\n",
+    "\n",
+    "You can disable it with:\n",
+    "\n",
+    " ```python\n",
+    " import warnings\n",
+    " warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
+    "\n",
+    " ```\n",
+    " If you use the \"new\" vois classess you can even mix new and old properties/function calls etc..\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "07c261bf-a384-4cca-831d-8d3fbf9b07e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "bool(None)"
+    "my_new_button.setText('New Name - New! Old Func')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "726226b8-3f46-41c9-9973-3e30548fccbd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "assert my_new_button.color_selected == my_new_button.colorselected"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95c4bad6-93fc-44d6-bd03-0e92102f2775",
+   "id": "c897cd60-2006-4048-b25e-7b284184b608",
    "metadata": {},
    "outputs": [],
    "source": []
