Example of load_local_vois

--- a/src/vois/vuetify/Tests/buttonTest.ipynb
+++ b/src/vois/vuetify/Tests/buttonTest.ipynb
@@ -9,24 +9,26 @@
    },
    "outputs": [],
    "source": [
-    "import importlib.util\n",
-    "import sys\n",
-    "\n",
-    "spec = importlib.util.spec_from_file_location(\"vois\", \"../../__init__.py\")\n",
-    "module = importlib.util.module_from_spec(spec)\n",
-    "sys.modules['vois'] = module\n",
-    "spec.loader.exec_module(module)\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning) \n",
-    "\n",
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../../development/load_local_vois.py -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4ec9146c-66fc-4367-963d-3d5425457a1c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "from vois.vuetify import settings, Button\n",
     "from vois.vuetify import button"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "65048188",
    "metadata": {
     "tags": []
@@ -35,7 +37,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b668370f97a4a0b8dad13bfe615cc35",
+       "model_id": "512956b9ed984925abdb210215d2ba47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,7 +51,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28ba9d98f3bc443884e382e825573374",
+       "model_id": "869d058bc10f4230a19639aae7d4fb70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -63,7 +65,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0a0ec1ba1c14d5ca285f3f7e8f13291",
+       "model_id": "2a0192af7f7e499faa98c6fa8c113ac4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e60ca09e",
    "metadata": {
     "tags": []
@@ -107,7 +109,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f97565449f3943a3a7807f5d8f7c0067",
+       "model_id": "42e7ed163ae7455096e38d9d645f205f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,7 +123,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e002402fbf4e423d8ec838a5a55e39d2",
+       "model_id": "011477f3445d4a769c5083b8afee0c75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e8ea29d2",
    "metadata": {
     "tags": []
@@ -150,7 +152,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5426322c53d474b9cdb80f7e2915f47",
+       "model_id": "34e54086b0b54eeb985616e404711b9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,7 +160,7 @@
        "button(children=[Container(children=[Tooltip(bottom=True, children=[''], color='#999999', layout=None, transit…"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4254d3bd",
    "metadata": {
     "tags": []
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "baf3f094",
    "metadata": {
     "tags": []
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9e3ba88d",
    "metadata": {
     "tags": []
@@ -206,7 +208,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d4231806cfe4e31a5b26489f940fe5d",
+       "model_id": "12df8d2d6ca84fb4afd8763f0ae25726",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,14 +226,6 @@
     "            tooltip='Example of an extremely long tooltip text', selected=False, icon='mdi-car-light-high', iconleft=True, iconcolor='black', rounded=True)\n",
     "display(b1.draw())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6949e626",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -250,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
