--- a/src/vois/vuetify/Tests/datePickerTest.ipynb
+++ b/src/vois/vuetify/Tests/datePickerTest.ipynb
@@ -3,18 +3,33 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "7986daf8-5177-42c7-a31d-0cf02e9fb107",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../../development/load_local_vois.py -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "e24938ca",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f517548c59e440c91f7662bfe09a34d",
+       "model_id": "0bd107e1046546f6bfd95224fa9b3349",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Menu(children=[DatePicker(color='#f8bd1a', dark=False, header_color='#f8bd1a', layout=None, max='2023-11-02', …"
+       "datePicker(children=[DatePicker(color='#f8bd1a', dark=False, header_color='#f8bd1a', layout=None, max='2024-08…"
       ]
      },
      "metadata": {},
@@ -23,7 +38,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ea6c86686144e74ae04ec975e790bfb",
+       "model_id": "6e8bdf107d474578897f3ab6046673ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +51,7 @@
     }
    ],
    "source": [
-    "%run datePicker.py\n",
+    "from vois.vuetify import datePicker\n",
     "\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -51,11 +66,11 @@
     "maxdate = datetime.today()\n",
     "mindate = maxdate - timedelta(days=10)\n",
     "\n",
-    "d = datePicker(date=None, label='Start date', \n",
-    "               offset_x=True, offset_y=False,\n",
-    "               onchange=onchange, disabled=False,\n",
-    "               maxdate=maxdate.strftime('%Y-%m-%d'),\n",
-    "               mindate=mindate.strftime('%Y-%m-%d'))\n",
+    "d = datePicker.datePicker(date=None, label='Start date', \n",
+    "                           offset_x=True, offset_y=False,\n",
+    "                           onchange=onchange, disabled=False,\n",
+    "                           maxdate=maxdate.strftime('%Y-%m-%d'),\n",
+    "                           mindate=mindate.strftime('%Y-%m-%d'))\n",
     "\n",
     "display(d.draw())\n",
     "display(output)"
@@ -63,9 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "bbbc4588",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "d.date = '2021-12-11'"
@@ -73,9 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "98dbb85c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "d.disabled = True"
@@ -83,9 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "65dc9682",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "d.disabled = False"
@@ -116,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
