--- a/src/vois/vuetify/Tests/progressTest.ipynb
+++ b/src/vois/vuetify/Tests/progressTest.ipynb
@@ -2,25 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "50e0feda-f0b9-4133-9b0d-510dc2dad1c4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../../development/load_local_vois.py -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f16595ec",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf71fe200d3e44a3b5390fdcb014f128",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='510px', width='99%'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "from ipywidgets import widgets, Layout, HTML\n",
     "from IPython.display import display\n",
@@ -29,16 +29,18 @@
     "output = widgets.Output(layout=Layout(width='99%', height='%dpx' % (outputheight+10)))\n",
     "display(output)\n",
     "\n",
-    "%run progress.py\n",
+    "from vois.vuetify import progress\n",
     "\n",
-    "p = progress(output, text='Please, wait...', size=200, width=20, show=True, outputheight=outputheight)"
+    "p = progress.progress(output, text='Please, wait...', size=200, width=20, show=True, outputheight=outputheight)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "eb4a7a49",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "p.close()"
@@ -46,41 +48,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "34776a40",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30c67109fdd548d5a8f06372025ae616",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "# Example of a transparent and absolutely positioned progress\n",
-    "%run progress.py\n",
-    "\n",
     "output = widgets.Output(layout=Layout(width='0px', height='0px'))\n",
     "display(output)\n",
     "\n",
-    "p = progress(None, text='Please, wait...', size=150, width=20, show=False)\n",
+    "p = progress.progress(None, text='Please, wait...', size=150, width=20, show=False)\n",
     "p.showAbsolute(output, 'calc(50vw - 150px)', 'calc(50vh - 150px)', 9999)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "fa3bd909",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "p.close()"
@@ -111,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
