--- a/src/vois/vuetify/Tests/sliderTest.ipynb
+++ b/src/vois/vuetify/Tests/sliderTest.ipynb
@@ -2,35 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "c7b28667-216b-420c-8eb7-a1374a39bdde",
+   "execution_count": 1,
+   "id": "8e0cc537-a439-4b7a-a5fa-d3d956253193",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../../../')\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning) "
+    "# To load local vois library with ignoring deprecation warnings\n",
+    "%run ../../development/load_local_vois.py -w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "d363ca7f-8775-4926-a540-a46e05f8dcb5",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from vois.vuetify import slider"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "d97bec69",
    "metadata": {
     "tags": []
@@ -39,7 +24,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c124a8e55b954a18b679a92fd7d12b9d",
+       "model_id": "c293cc1dcc5945079723196b298796ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -52,6 +37,7 @@
     }
    ],
    "source": [
+    "from vois.vuetify import slider\n",
     "from ipywidgets import HTML, widgets, Layout\n",
     "output = widgets.Output(layout=Layout(width='400px'))\n",
     "display(output)\n",
@@ -68,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "d7329d1d",
    "metadata": {
     "tags": []
@@ -80,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "c64deb1e",
    "metadata": {
     "tags": []
@@ -100,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "4d7d7816-d288-4f96-bb19-8ff8521371da",
    "metadata": {
     "tags": []
@@ -109,15 +95,15 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f306b3d46e143dfa33548cf187a03bc",
+       "model_id": "c1fb926308be466784357024808f401a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Html(children=[Slider(class_='pa-0 ma-0 ml-5 mr-5 mt-n2 mb-n12', color='#f8bd1a', dense=True, height=250.0, la…"
+       "slider(children=[Slider(class_='pa-0 ma-0 ml-5 mr-5 mt-n2 mb-n12', color='#f8bd1a', dense=True, height=250.0, …"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,22 +114,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "8d9b3ad5-7323-40ab-a7c7-1883ba425c77",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34224b7b3e1742659084f95d5e66fe74",
+       "model_id": "7a2b70feca674be5beab212a3c802e2f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Html(children=[Slider(class_='pa-0 ma-0 ml-n12 mr-n12 mt-n9 mb-n10', color='#f8bd1a', dense=True, height=350.0…"
+       "slider(children=[Slider(class_='pa-0 ma-0 ml-n12 mr-n12 mt-n9 mb-n10', color='#f8bd1a', dense=True, height=350…"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,14 +146,6 @@
     "                            )\n",
     "edo.draw()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "838a91b2-83cd-40b4-810d-e797a94c10d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
