--- a/src/vois/vuetify/Tests/colorPickerTest.ipynb
+++ b/src/vois/vuetify/Tests/colorPickerTest.ipynb
@@ -2,12 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9ce88e73",
-   "metadata": {},
+   "execution_count": 1,
+   "id": "c28df0f6-afef-4679-8af5-633d20985ffa",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "%run colorPicker.py\n",
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../../development/load_local_vois.py -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9ce88e73",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c8e6581b63ac480caa1993f76b5ffe2a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "colorPicker(children=[ColorPicker(canvas_height=100.0, class_='pa-0 ma-0', dark=False, flat=True, hide_canvas=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1c50559a3e0a4523a5a828a304baff2c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from vois.vuetify import colorPicker\n",
     "\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -18,7 +62,7 @@
     "    with output:\n",
     "        print('Changed to', c.color)\n",
     "\n",
-    "c = colorPicker(color='#00AAFF', width=30, height=30, rounded=False, onchange=onchange, argument=None, offset_x=True, offset_y=False)\n",
+    "c = colorPicker.colorPicker(color='#00AAFF', width=30, height=30, rounded=False, onchange=onchange, argument=None, offset_x=True, offset_y=False)\n",
     "\n",
     "display(c.draw())\n",
     "display(output)"
@@ -26,9 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6ffdbc94",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "c.color = '#00FF88'"
@@ -36,9 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5f587f2c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "c.disabled = True"
@@ -46,21 +94,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "81249ebd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "c.disabled = False"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1451c5fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -79,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
