Fixed templates and mapUtils for interapro_env kernel

--- a/src/vois/vuetify/Tests/pageTest.ipynb
+++ b/src/vois/vuetify/Tests/pageTest.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "94439510",
-   "metadata": {},
+   "execution_count": 4,
+   "id": "6ec48832",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dbc50be39d94b55b96f52639f9cea02",
+       "model_id": "a034b6712fb347589d50e316deb351c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -63,9 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b434b5f7",
-   "metadata": {},
+   "execution_count": 2,
+   "id": "0b0823af",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Properties\n",
@@ -102,41 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e5c08304",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on property:\n",
-      "\n",
-      "    Get/Set the image to display on the title bar\n",
-      "    \n",
-      "    Returns\n",
-      "    --------\n",
-      "    imageurl : str\n",
-      "        String containing the url of the title bar backbround image\n",
-      "    \n",
-      "    Example\n",
-      "    -------\n",
-      "    Programmatically change the title bar background image::\n",
-      "        \n",
-      "        p.titleimageurl = 'https://.....'\n",
-      "        print(p.titleimageurl)\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(page.titleimageurl)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
-   "id": "341aed5d",
+   "id": "59a5b36f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3a7ed11a",
+   "id": "7ee92be3",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce55f6db",
+   "id": "5327b6dc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -222,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
