--- a/src/vois/templates/PageConfiguratorTest.ipynb
+++ b/src/vois/templates/PageConfiguratorTest.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c37e5fbd",
+   "execution_count": 8,
+   "id": "422c5fc0",
    "metadata": {
     "tags": []
    },
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7c170194d364b0fa0cacbf23f6cca98",
+       "model_id": "ec884c242aa443628463af6885dead48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -24,29 +24,26 @@
     }
    ],
    "source": [
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../development/load_local_vois.py -w\n",
+    "\n",
     "from ipywidgets import widgets, HTML, Layout\n",
-    "from vois.vuetify import settings\n",
-    "settings.dark_mode      = True\n",
-    "settings.color_first    = '#0d856d'\n",
-    "settings.color_second   = '#a0dcd0'\n",
-    "settings.button_rounded = True\n",
     "\n",
     "output = widgets.Output(layout=Layout(width='0px', height='0px'))\n",
     "display(output)\n",
     "\n",
-    "# Create the page\n",
-    "%run template3panels.py\n",
-    "p = template3panels(output)\n",
-    "card = p.create()\n",
     "\n",
-    "# Open the page\n",
-    "p.open()"
+    "%run PageConfigurator.py\n",
+    "\n",
+    "c = PageConfigurator(output)\n",
+    "\n",
+    "c.page.open()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "803ff8ea",
+   "id": "8ef4bab1",
    "metadata": {},
    "outputs": [],
    "source": []
