--- a/src/vois/templates/template1panelTest.ipynb
+++ b/src/vois/templates/template1panelTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "b18cf9d4",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1d0aae363074ac79550773513368f35",
+       "model_id": "bfd9d471f50f4deabf2a231ea492e19f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -24,6 +24,9 @@
     }
    ],
    "source": [
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../development/load_local_vois.py -w\n",
+    "\n",
     "from ipywidgets import widgets, HTML, Layout\n",
     "from vois.vuetify import settings\n",
     "settings.dark_mode      = True\n",
@@ -46,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1e560b7",
+   "id": "fb63edb6-0d49-4f6f-a0c8-dfe0f9af028f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -54,9 +57,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [interapro_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-interapro_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -68,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
