--- a/src/vois/templates/template2panelsTest.ipynb
+++ b/src/vois/templates/template2panelsTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "215b06cc",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09e822d177be4c6489cf562c16251d1b",
+       "model_id": "67f5192507a94fe59fe870f3fce9937a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eaacb71",
+   "id": "a47add95-3274-4915-9a78-45ba9bbdf9c8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -54,9 +54,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [interapro_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-interapro_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -68,7 +68,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
