Small bug in Button.py, work on templates

--- a/src/vois/templates/PageConfiguratorTest.ipynb
+++ b/src/vois/templates/PageConfiguratorTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "422c5fc0",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec884c242aa443628463af6885dead48",
+       "model_id": "d7b22a54420747528204f1ef9870cc34",
        "version_major": 2,
        "version_minor": 0
       },
@@ -28,6 +28,11 @@
     "%run ../development/load_local_vois.py -w\n",
     "\n",
     "from ipywidgets import widgets, HTML, Layout\n",
+    "from vois.vuetify import settings\n",
+    "settings.dark_mode      = True\n",
+    "settings.color_first    = '#0d856d'\n",
+    "settings.color_second   = '#a0dcd0'\n",
+    "settings.button_rounded = True\n",
     "\n",
     "output = widgets.Output(layout=Layout(width='0px', height='0px'))\n",
     "display(output)\n",
@@ -38,6 +43,34 @@
     "c = PageConfigurator(output)\n",
     "\n",
     "c.page.open()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5124679c-0c84-49cd-8869-28110326937f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e5b27438e6147728dc20e5bd5152b4a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "PageConfigurator(children=[Card(children=[Row(children=[Button(children=[Container(children=[Tooltip(bottom=Tr…"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
    ]
   },
   {
