--- a/src/vois/templates/mapUtilsTest.ipynb
+++ b/src/vois/templates/mapUtilsTest.ipynb
@@ -9,9 +9,23 @@
    },
    "outputs": [],
    "source": [
-    "# Minimal instructions to have the HDF5 errors (only if kernel is restarted\n",
+    "# Minimal instructions to have the HDF5 errors (only if kernel is restarted)\n",
     "from jeodpp import inter\n",
     "from osgeo import ogr, osr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d899d6b-ae20-4afb-962c-c154e19cb6f7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Inverting the two import commands seems to solve\n",
+    "from osgeo import ogr, osr\n",
+    "from jeodpp import inter"
    ]
   },
   {
